<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/homepage"
        android:color="@color/white"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:color="@color/white"/>

    <item
        android:id="@+id/nav_details"
        android:icon="@drawable/ic_syringe"
        android:title="Details"
        android:color="@color/white"/>
    <item
        android:id="@+id/nav_Tips"
        android:icon="@drawable/ic_list"
        android:title="Tips"
        android:color="@color/white"/>
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info"
        android:title="@string/info"
        android:color="@color/white"/>
</menu>
