<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark"
    android:padding="@dimen/small_padding">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentCountainerVaccine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/question_text"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/symptoms_text"
                style="@style/expanded_card_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/Symptoms"
                app:layout_constraintEnd_toEndOf="@+id/question_text"
                app:layout_constraintStart_toStartOf="@+id/question_text"
                app:layout_constraintTop_toBottomOf="@+id/question_text" />

            <TextView
                android:id="@+id/read_more_symptoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/read_more"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/symptoms_text"
                app:layout_constraintEnd_toEndOf="@+id/symptoms_text" />

            <TextView
                android:id="@+id/prevention_text"
                style="@style/expanded_card_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/prevention"
                app:layout_constraintEnd_toEndOf="@+id/symptoms_text"
                app:layout_constraintStart_toStartOf="@+id/symptoms_text"
                app:layout_constraintTop_toBottomOf="@+id/symptoms_text" />

            <TextView
                android:id="@+id/read_more_prevention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/read_more"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/prevention_text"
                app:layout_constraintEnd_toEndOf="@+id/prevention_text" />

            <TextView
                android:id="@+id/types_of_vaccinations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/types_of_vaccinations"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text_size"
                app:layout_constraintEnd_toEndOf="@+id/prevention_text"
                app:layout_constraintStart_toStartOf="@+id/prevention_text"
                app:layout_constraintTop_toBottomOf="@+id/prevention_text" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="@+id/types_of_vaccinations"
                app:layout_constraintStart_toStartOf="@+id/types_of_vaccinations"
                app:layout_constraintTop_toBottomOf="@+id/types_of_vaccinations">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_vaccine_pfizer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:background="@drawable/rec_green_shape"
                        android:padding="@dimen/small_padding"
                        app:cardCornerRadius="@dimen/small_card_radius"
                        app:cardElevation="@dimen/small_elevation">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/prevention"
                            android:orientation="vertical"
                            android:padding="@dimen/normal_padding">

                            <TextView
                                android:id="@+id/vaccine_pfizer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_padding"
                                android:gravity="center_horizontal"
                                android:text="@string/pfizer"
                                android:textColor="@color/black"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/image_pfizer"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:background="@drawable/pfizer_ic"

                                />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_vaccine_astrazeneca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:background="@drawable/rec_green_shape"
                        android:padding="@dimen/small_padding"
                        app:cardCornerRadius="@dimen/small_card_radius"
                        app:cardElevation="@dimen/small_elevation">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/prevention"
                            android:orientation="vertical"
                            android:padding="@dimen/normal_padding">

                            <TextView
                                android:id="@+id/vaccine_AstraZeneca"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_padding"
                                android:gravity="center_horizontal"
                                android:text="@string/astrazeneca"
                                android:textColor="@color/black"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/image_astrazeneca"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:background="@drawable/astraceneca_ic" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_vaccine_moderna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:background="@drawable/rec_green_shape"
                        android:padding="@dimen/normal_padding"
                        app:cardCornerRadius="@dimen/small_card_radius"
                        app:cardElevation="@dimen/small_elevation">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/prevention"
                            android:orientation="vertical"
                            android:padding="@dimen/normal_padding">

                            <TextView
                                android:id="@+id/vaccine_modern"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/moderna"
                                android:textColor="@color/black"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/image_vaccine_modern"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:background="@drawable/moderna_ic" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_vaccine_Johnson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:background="@drawable/rec_green_shape"
                        android:padding="@dimen/small_padding"
                        app:cardCornerRadius="@dimen/small_card_radius"
                        app:cardElevation="@dimen/small_elevation">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:background="@drawable/prevention"
                            android:orientation="vertical"
                            android:padding="@dimen/normal_padding">

                            <TextView
                                android:id="@+id/vaccine_Johnson"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_margin"
                                android:gravity="center_horizontal"
                                android:text="@string/johnson_and_johnson"
                                android:textColor="@color/black"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/image_vaccine_Johnson"
                                android:layout_width="60dp"
                                android:layout_height="30dp"
                                android:background="@drawable/ic_johnson_and_johnson"
                                android:gravity="center" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_vaccine_sinopharm"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_marginStart="@dimen/small_margin"
                        android:background="@drawable/rec_green_shape"
                        android:padding="@dimen/small_padding"
                        app:cardCornerRadius="@dimen/small_card_radius"
                        app:cardElevation="@dimen/small_elevation">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/prevention"
                            android:orientation="vertical"
                            android:padding="@dimen/normal_padding">

                            <TextView
                                android:id="@+id/vaccine_sinopharm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/small_margin"
                                android:gravity="center_horizontal"
                                android:text="@string/sinopharm"
                                android:textColor="@color/black"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/image_vaccine_sinopharm"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:background="@drawable/ic_sinopharm" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_vaccine_apple"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_marginStart="@dimen/small_margin"
                        android:background="@drawable/rec_green_shape"
                        android:padding="@dimen/small_padding"
                        app:cardCornerRadius="@dimen/small_card_radius"
                        app:cardElevation="@dimen/small_elevation">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/prevention"
                            android:orientation="vertical"
                            android:padding="@dimen/normal_padding">

                            <TextView
                                android:id="@+id/vaccine_apple"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/my_team"
                                android:textColor="@color/black"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/image_vaccine_apple"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/normal_margin"
                                android:background="@drawable/ic_apple" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
