<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ic_syringe"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_syringe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:textColor="@color/black"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_syringe"
        app:layout_constraintStart_toEndOf="@+id/ic_syringe"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/project_description"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name" />

    <TextView
        android:id="@+id/text_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/credits"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_syringe"
        app:layout_constraintEnd_toStartOf="@+id/ic_syringe"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/ic_syringe"
        app:layout_constraintTop_toBottomOf="@+id/ic_syringe" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_team_leader"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_credit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ic_image_leader"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/aymn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/text_name_Aymn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/name_aymn"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/ic_image_leader"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_content_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text=" designer of  this app"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_name_Aymn" />
            <ImageButton
                android:id="@+id/button_github_aymn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:onClick="addCallback"
                android:background="@drawable/social_media_shape"
                android:elevation="8dp"
                android:src="@drawable/ic_github"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_team_leader">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_image_member_two"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/enas"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_name_enas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/name_Enas"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/ic_image_member_two"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_content_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Supervisor of this project"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_name_enas"
                    app:layout_constraintTop_toTopOf="@+id/text_name_enas"
                    app:layout_constraintVertical_bias="0.673" />

                <ImageButton
                    android:id="@+id/button_github_enas"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/social_media_shape"
                    android:elevation="8dp"
                    android:onClick="addCallback"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/git"
        app:lottie_speed="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>